app/styles/editpanel.scss
.table {
    width: 100%;
    margin-bottom: 0px;
}
.p-l-3 {
    padding-left: 3px;
}
.keep.switch {
    width: 100%!important;
}
.fsn,
.title-text,
{
    width: 100%;
}
.editpanel {
    color: #737373 !important;
}
.model-header label {
    margin-bottom: 0px;
    width: 100%;
}
tab-pane.active .no-padding.col-md-9,
.angular-ui-tree-node,
{
    line-height: 12px;
    font-size: 12px;
    padding-bottom: 3px;
}
.angular-ui-tree-nodes .angular-ui-tree-nodes {
    padding-left: 8px;
}
.angular-ui-tree-node {
    font-size: 11.5px;
    line-height: 13px;
    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
.angular-ui-tree.p-10 {
    padding: 0px 5px!important;
}
.saved-list {
    font-size: 12px;
}
.editpanel a {
    color: #666;
}
aside.editpanel ul a {
    padding: 12px;
    color: #737373 !important;
}
.editing-form {
    -webkit-text-size-adjust: 100%;
    padding-bottom: 5px;
}
.editing-form a {
    text-decoration: none;
    color: #33a4fd;
}
.editing-form input,
.editing-form textarea,
.editing-form select {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -o-box-sizing: border-box;
    box-sizing: border-box;
    color: #474747 !important;
    margin-bottom: 0px;
    padding: 2px 4px !important;
    background-color: #e0f7fa;
    border: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none !important;
}
select.primitive {
    color: #fff !important;
}
.editing-form input:focus,
.editing-form textarea:focus,
.editing-form select:focus,
.editing-form input:active,
.editing-form textarea:active,
.editing-form select:active {
    outline: 0;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}
.editing-form input:last-child,
.editing-form textarea:last-child,
.editing-form select:last-child {
    margin-bottom: 0;
}
.editing-form input[type=button]:focus,
.editing-form input[type=submit]:focus,
.editing-form input[type=reset]:focus {
    background-color: #66bbfd;
    border-color: transparent;
}
.editing-form button:focus,
.editing-form button:active {
    background-color: transparent!important;
    border-color: transparent;
}
.editing-form input[type=button]:active,
.editing-form input[type=submit]:active,
.editing-form input[type=reset]:active {
    background-color: #66bbfd;
    border-color: transparent;
}
.editing-form button:active {
    color: #66bbfd;
    background-color: transparent!important;
    border-color: transparent;
}
.editing-form input[type=submit] {
    -webkit-transition: all 500ms;
    -moz-transition: all 500ms;
    -ms-transition: all 500ms;
    -o-transition: all 500ms;
    transition: all 500ms;
}
.editing-form input[type=submit].state-success {
    background-color: #66bbfd;
    border-color: transparent;
    width: 130px;
}
.editing-form input[type=submit].state-error {
    background-color: #66bbfd;
    border-color: transparent;
    width: 120px;
}
.editing-form input[type=submit].state-initial {
    width: 100px;
}
.editing-form input[type=radio],
.editing-form input[type=checkbox] {
    position: absolute;
    pointer-events: none;
    opacity: 0;
    margin: 0;
    padding: 0;
    height: 10px;
}
.editing-form input[type=radio] + span,
.editing-form input[type=checkbox] + span {
    display: inline-block;
    width: 18px;
    height: 18px;
    background-color: #fff;
    border: 1px solid #cecece;
    text-align: center;
    vertical-align: top;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -o-box-sizing: border-box;
    box-sizing: border-box;
}
.editing-form input[type=radio] + span::after,
.editing-form input[type=checkbox] + span::after {
    content: "";
    display: inline-block;
    opacity: 0;
    width: 100%;
    height: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -o-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-transition: all 200ms;
    -moz-transition: all 200ms;
    -ms-transition: all 200ms;
    -o-transition: all 200ms;
    transition: all 200ms;
}
.editing-form input[type=radio]:focus + span,
.editing-form input[type=checkbox]:focus + span,
.editing-form input[type=radio]:active + span,
.editing-form input[type=checkbox]:active + span {
    border-color: #33a4fd;
}
.editing-form input[type=radio]:checked + span::after,
.editing-form input[type=checkbox]:checked + span::after {
    opacity: 1;
}
.editing-form input[type=radio].error + span,
.editing-form input[type=checkbox].error + span {
    border-color: #e2513f;
    border-width: 2px;
}
.editing-form input[type=radio] + span {
    -webkit-border-radius: 2em;
    -moz-border-radius: 2em;
    border-radius: 2em;
    -moz-box-shadow: 0 0 5px #ddd;
    -webkit-box-shadow: 0 0 5px #ddd;
    box-shadow: 0 0 5px #ddd;
}
.editing-form input[type=radio] + span::after {
    -webkit-border-radius: 1em;
    -moz-border-radius: 1em;
    border-radius: 1em;
    background-color: #33a4fd;
}
.editing-form input[type=radio]:checked + span::after {
    border: 0.2em solid #fff;
}
.editing-form input[type=checkbox] + span {
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    -moz-box-shadow: 0 0 5px #ddd;
    -webkit-box-shadow: 0 0 5px #ddd;
    box-shadow: 0 0 5px #ddd;
}
/* ... */

